[gd_scene load_steps=7 format=3 uid="uid://dhdfoi33f64ao"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_4m64t"]
[ext_resource type="PackedScene" uid="uid://bn16lvqbbfmh7" path="res://Scenes/Slingshot.tscn" id="2_yb0io"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hg7k8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_o4s10"]
size = Vector3(1.37476, 2, 1.32861)

[sub_resource type="LabelSettings" id="LabelSettings_272vn"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_e05ag"]
font_size = 50

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03155, 0)
collision_layer = 2
script = ExtResource("1_4m64t")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.988923, 0, 0.148431, 0, 1, 0, -0.148431, 0, 0.988923, -0.129533, 2.92329, -0.0673518)
mesh = SubResource("CapsuleMesh_hg7k8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.118696, 2.92036, -0.111372)
shape = SubResource("BoxShape3D_o4s10")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(0.999954, 0, 0.00954681, 0, 1, 0, -0.00954681, 0, 0.999954, -0.126171, 3.571, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0461521, 0)

[node name="Slingshot" parent="Head/Camera3D" instance=ExtResource("2_yb0io")]
transform = Transform3D(-4.19095e-08, 0, 1, 0, 1, 0, -1, 0, -4.19095e-08, -0.014999, -0.576387, -1.56285)

[node name="BubbleCounter" type="Label" parent="Head/Camera3D"]
offset_right = 257.0
offset_bottom = 136.0
label_settings = SubResource("LabelSettings_272vn")

[node name="ColorRect" type="ColorRect" parent="Head/Camera3D"]
visible = false
anchors_preset = -1
anchor_left = -0.032
offset_left = -60.136
offset_top = -94.0
offset_right = 6234.0
offset_bottom = 4209.0
color = Color(0.47451, 1, 1, 0.180392)

[node name="StoneCounter" type="Label" parent="Head/Camera3D"]
anchors_preset = 10
anchor_right = 1.0
offset_left = 869.0
offset_top = -2.0
offset_right = -2.0
offset_bottom = 110.0
grow_horizontal = 2
label_settings = SubResource("LabelSettings_e05ag")
horizontal_alignment = 2
autowrap_mode = 1

[node name="TimerDisplay" type="Label" parent="Head/Camera3D"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
